--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1><strong>Willkommen auf meiner Website</strong></h1>
         <p>Dies ist ein Absatz mit Text.</p>
 
-        <a href="https://wikitravel.org/de/Koblenz">Klicke hier um mehr über Koblenz zu erfahren!</a>
+        <a href="https://wikitravel.org/de/Koblenz">Klicke hier um mehr über Koblenz zu erfahren! "&#10084;&#65039;&#8205;&#128293;"</a>
 
         <ul>
             <li>Startsteite</li>
