FHC02-WE-Bibliothek-Zitatänderungen

--- a/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
+++ b/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
@@ -49,7 +49,7 @@
                         <!-- Blockquote ist da um einen längeren Textabschnitt als Zitat aus einer 
                         anderen Quelle zu kennzeichnen-->
                         <blockquote>
-                            <pre>"Nicht alle die wandern, sind verloren."</pre>
+                            <pre><em>"Nicht alle die wandern, sind verloren."</em></pre>
                         </blockquote>
                         <br>
 
@@ -82,8 +82,8 @@
                         <br>
                         
                         <blockquote>
-                            <pre>"Es sind unsere Entscheidungen, Harry, die zeigen, wer wir wirklich sind, weit mehr als
-                                unsere Fähigkeiten."</pre>
+                            <pre></em>"Es sind unsere Entscheidungen, Harry, die zeigen, wer wir wirklich sind, weit mehr als
+                                unsere Fähigkeiten."</em></pre>
                         </blockquote>
                         <br>
 
@@ -113,8 +113,8 @@
                         <br>
 
                         <blockquote>
-                            <pre>"Kein Schatz auf Erden und kein Glück kann mit einem Freund verglichen werden, der uns
-                            in schweren Zeiten beisteht."</pre>
+                            <pre></em>"Kein Schatz auf Erden und kein Glück kann mit einem Freund verglichen werden, der uns
+                            in schweren Zeiten beisteht."</em></pre>
                         </blockquote>
                         <br>
 
