erste CSS Styles

--- a/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
+++ b/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
@@ -10,6 +10,11 @@
          user-scalable: ob der Nutzer auf der Seite zoomen kann-->
         <meta name="viewport" content ="width=device-width, initial-scale=1.0, user-scalable=yes"> 
         <title>Meine Bibliothek-Startseite aus Web-Entwicklung</title> <!-- wir im Tab angezeigt, Suchmaschinen verwenden ihn i.d.R. als Treffer-->
+        <link 
+            rel="stylesheet"
+            href="style.css"
+            type="text/css">
+
     </head>
 
     <body> <!--enthält die Info die vom Browser dargestellt wird-->
@@ -55,7 +60,7 @@
 
                         <!--enthält Informationen, die in einem indirekten Zusammenhang zum Hauptinhalt stehen.
                         Bsp: Seitennavigation, Werbung, Werbungsbanner oder Fußnoten.
-                        Also eigentlich passt das hier nicht so gut.  -->
+                        Also eigentlich passt das hier nicht so gut. hier wäre paragraph / absatz auch ok -->
                         <aside>Der Herr der Ringe ist ein Literaturklassiker und umfasst drei Bände.<br>
                         John Ronald Reuel Tolkien, bekannt als J.R.R. Tolkien, war ein britischer Schriftsteller, Philologe
                         und Hochschullehrer. Er wurde am 3. Januar 1892 in Bloemfontein, Südafrika, geboren und
