--- a/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
+++ b/campus02.WE.Bibliothek/Uebung2_Bibliothek.html
@@ -152,6 +152,12 @@
                     <li><a href="impressum.html">Impressum</a></li>
                 </ul>
             </nav>
+
+                <p>&copy; 2025 Virtuelle Bibliothek. Alle Rechte vorbehalten.</p>
+            <div class="contact-info">
+                <p>Kontakt Info:</p>
+                <p>Email: virtuellebiblothek@info.at | Telefon: +43 678 8398363 | Adresse: Jakominiplatz 12, 8010 Graz</p>
+            </div>
         </footer>
     
     </body>
