Final Bauernhof Design Hausaufgabe

--- a/WE.Bauernhof.Design/Bauernhof.Design/index.html
+++ b/WE.Bauernhof.Design/Bauernhof.Design/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <header class="main-header">
-        <h1>Frische Wiesen Ökologischer Bauernhof</h1>
+        <h1>Frische Wiesen <span class="mobile-break-h1"></span>
+            Ökologischer <span class="mobile-break-h1"></span> 
+            Bauernhof</h1>
     </header>
 
     <section class="hero-section">
         <div class="hero-content">
-            <h2>Der beste ökologische Bauernhof in <br> Berlin</h2>
+            <h2>Der beste <span class="mobile-break-h2"></span>
+                ökologische <span class="mobile-break-h2"></span> 
+                Bauernhof in <span class="mobile-break-h2"></span>
+                <span class="desktop-break-h2"></span> Berlin</h2>
         </div>
     </section>
 
@@ -21,7 +26,7 @@
         <aside class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Startseite</a></li>
+                    <li><a href="#">Startseite</a></li>
                     <li><a href="#">Produkte</a></li>
                     <li><a href="#">Über uns</a></li>
                     <li><a href="#">Kontakt</a></li>
@@ -63,7 +68,8 @@
             <a href="#">AGB</a>
             <a href="#">Impressum</a>
         </div>
-        <p>Kontaktieren Sie uns unter <a href="mailto:contact@freshmeadows.com">contact@freshmeadows.com</a></p>
+        <p>Kontaktieren Sie uns unter <span class="mobile-break"></span> 
+            <a href="mailto:contact@freshmeadows.com">contact@freshmeadows.com</a></p>
     </footer>
 </body>
 </html>
