--- a/Hausaufgabe_Das.kleine.Glück/blog.html
+++ b/Hausaufgabe_Das.kleine.Glück/blog.html
@@ -47,7 +47,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_eggenberg.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/eggenberg_thumb.jpg" alt="Schloss Eggenberg">
+                            <img src="images/blog_thumbs/eggenberg_thumb.jpeg" alt="Schloss Eggenberg">
                         </div>
                         <h3>Architektur in Graz - Das Schloss Eggenberg</h3>
                         <p>Tauche ein in die Welt des Barocks im Schloss Eggenberg, einem UNESCO-Weltkulturerbe...</p>
@@ -57,7 +57,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_hauptplatz.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/hauptplatz_thumb.jpg" alt="Grazer Hauptplatz">
+                            <img src="images/blog_thumbs/hauptplatz_thumb.jpeg" alt="Grazer Hauptplatz">
                         </div>
                         <h3>Architektur in Graz - Der Grazer Hauptplatz</h3>
                         <p>Das lebendige Herzstück der Stadt und ein faszinierendes Freilichtmuseum der Architekturgeschichte...</p>
@@ -67,7 +67,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_herzjesu.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/herzjesu_thumb.jpg" alt="Herz Jesu Kirche">
+                            <img src="images/blog_thumbs/herzjesu_thumb.jpeg" alt="Herz Jesu Kirche">
                         </div>
                         <h3>Architektur in Graz - Die Herz Jesu Kirche</h3>
                         <p>Die Herz Jesu Kirche in Graz ist ein monumentales Meisterwerk neugotischer Architektur...</p>
@@ -77,7 +77,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_mariahilfer_kirche.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/mariahilfer_kirche_thumb.jpg" alt="Mariahilfer Kirche">
+                            <img src="images/blog_thumbs/mariahilfer_kirche_thumb.jpeg" alt="Mariahilfer Kirche">
                         </div>
                         <h3>Architektur in Graz - Die Mariahilfer Kirche</h3>
                         <p>Ein bedeutendes barockes Bauwerk und ein beliebtes Ziel für Gläubige und Kunstliebhaber gleichermaßen...</p>
@@ -87,7 +87,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_universitaet_graz.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/universitaet_graz_thumb.jpg" alt="Universität Graz">
+                            <img src="images/blog_thumbs/universitaet_graz_thumb.jpeg" alt="Universität Graz">
                         </div>
                         <h3>Architektur in Graz - Die Universität Graz</h3>
                         <p>Die Karl-Franzens-Universität Graz, ist nicht nur eine der ältesten und größten Universitäten Österreichs...</p>
@@ -97,7 +97,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/bluetenpracht_baeume.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/blueten_baeume_thumb.jpg" alt="Blühende Bäume in Graz">
+                            <img src="images/blog_thumbs/blueten_baeume_thumb.jpeg" alt="Blühende Bäume in Graz">
                         </div>
                         <h3>Blütenpracht in Graz - Bäume</h3>
                         <p>Entdecke die Vielfalt und Schönheit der Bäume in Graz, die die Stadt in ein Blütenmeer verwandeln...</p>
@@ -107,7 +107,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/bluetenpracht_bluemchen.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/blueten_bluemchen_thumb.jpg" alt="Bunte Blumen in Graz">
+                            <img src="images/blog_thumbs/blueten_bluemchen_thumb.jpeg" alt="Bunte Blumen in Graz">
                         </div>
                         <h3>Blütenpracht in Graz - Blümchen</h3>
                         <p>Ich liebe Blumen – sehr. Und Graz bietet so viele Möglichkeiten, diese Leidenschaft auszuleben...</p>
@@ -117,7 +117,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/fruehling_lend.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/fruehling_lend_thumb.jpg" alt="Lendplatz in Graz im Frühling">
+                            <img src="images/blog_thumbs/fruehling_lend_thumb.jpeg" alt="Lendplatz in Graz im Frühling">
                         </div>
                         <h3>Frühling in Graz - Buntes Treiben im Stadtteil Lend</h3>
                         <p>Der Stadtteil Lend hat sich in den letzten Jahren zu einem der pulsierendsten und aufregendsten Viertel von Graz entwickelt...</p>
@@ -127,7 +127,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/fruehling_rosenhain.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/fruehling_rosenhain_thumb.jpg" alt="Kirschblüten am Rosenhain">
+                            <img src="images/blog_thumbs/fruehling_rosenhain_thumb.jpeg" alt="Kirschblüten am Rosenhain">
                         </div>
                         <h3>Frühling in Graz - Kirschblütentraum am Rosenhain</h3>
                         <p>Der Rosenhain in Graz verwandelt sich im Frühling in einen wahren Kirschblütentraum...</p>
@@ -137,7 +137,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/fruehling_schlossberg.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/fruehling_schlossberg_thumb.jpg" alt="Schlossberg Graz im Frühling">
+                            <img src="images/blog_thumbs/fruehling_schlossberg_thumb.jpeg" alt="Schlossberg Graz im Frühling">
                         </div>
                         <h3>Frühling in Graz - Der Schlossberg ganz romantisch (und bunt)</h3>
                         <p>Der Grazer Schlossberg, das grüne Herz der Stadt, zeigt sich im Frühling von seiner besonders romantischen Seite...</p>
@@ -147,7 +147,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/sommer_csd.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/sommer_csd_thumb.jpg" alt="CSD Parade Graz">
+                            <img src="images/blog_thumbs/sommer_csd_thumb.jpeg" alt="CSD Parade Graz">
                         </div>
                         <h3>Sommer in Graz - CSD - Fest der Liebe für Alle</h3>
                         <p>Ende Juni, wenn der Christopher Street Month weltweit gefeiert wird, verwandelt sich auch Graz...</p>
@@ -157,7 +157,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/sommer_redoute.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/sommer_redoute_thumb.jpg" alt="Redoute Kunst Uni Graz Performance">
+                            <img src="images/blog_thumbs/sommer_redoute_thumb.jpeg" alt="Redoute Kunst Uni Graz Performance">
                         </div>
                         <h3>Sommer in Graz - Die Redoute der Kunst Uni Graz</h3>
                         <p>Die Redoute der Kunstuniversität Graz (KUG) ist ein jährliches Highlight im sommerlichen Graz...</p>
@@ -167,7 +167,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/sommer_schlossberg_konzerte.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/sommer_schlossberg_konzerte_thumb.jpg" alt="Konzert Schlossberg Kasematten">
+                            <img src="images/blog_thumbs/sommer_schlossberg_konzerte_thumb.jpeg" alt="Konzert Schlossberg Kasematten">
                         </div>
                         <h3>Sommer in Graz - Konzerte am Schlossberg mit den schönsten Sonnenuntergängen</h3>
                         <p>Der Grazer Schlossberg ist im Sommer nicht nur ein Wahrzeichen, sondern auch eine der schönsten Open-Air-Bühnen...</p>
@@ -177,7 +177,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/sommer_stadtpark.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/sommer_stadtpark_thumb.jpg" alt="Stadtpark Graz im Sommer">
+                            <img src="images/blog_thumbs/sommer_stadtpark_thumb.jpeg" alt="Stadtpark Graz im Sommer">
                         </div>
                         <h3>Sommer in Graz - Wo wenn nicht im Stadtpark</h3>
                         <p>Der Grazer Stadtpark ist im Sommer die grüne Lunge der Stadt und ein beliebter Treffpunkt...</p>
@@ -187,7 +187,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/herbst_7summits.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/herbst_7summits_thumb.jpg" alt="Wandern auf den 7 Summits">
+                            <img src="images/blog_thumbs/herbst_7summits_thumb.jpeg" alt="Wandern auf den 7 Summits">
                         </div>
                         <h3>Herbst in Graz - Wandern auf den 7 Summits rund um Graz</h3>
                         <p>Wenn sich die Blätter verfärben und die Luft klarer wird, ist der Herbst die perfekte Zeit, um die Natur rund um Graz zu erkunden...</p>
@@ -197,7 +197,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/herbst_bauernmaerkte.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/herbst_bauernmaerkte_thumb.jpg" alt="Bauernmarkt Kaiser-Josef-Platz">
+                            <img src="images/blog_thumbs/herbst_bauernmaerkte_thumb.jpeg" alt="Bauernmarkt Kaiser-Josef-Platz">
                         </div>
                         <h3>Herbst in Graz - Die Bauernmärkte</h3>
                         <p>Die Bauernmärkte haben in Graz eine lange und lebendige Tradition und sind im Herbst...</p>
@@ -207,7 +207,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/herbst_klanglicht.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/herbst_klanglicht_thumb.jpg" alt="Klanglicht Installation">
+                            <img src="images/blog_thumbs/herbst_klanglicht_thumb.jpeg" alt="Klanglicht Installation">
                         </div>
                         <h3>Herbst in Graz - Das Klanglicht Festival</h3>
                         <p>Das Klanglicht Festival verwandelt Graz einmal im Herbst in eine riesige Freiluftgalerie...</p>
@@ -217,7 +217,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/winter_museen_restaurants.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/winter_museen_restaurants_thumb.jpg" alt="Museum in Graz">
+                            <img src="images/blog_thumbs/winter_museen_restaurants_thumb.jpeg" alt="Museum in Graz">
                         </div>
                         <h3>Winter in Graz - Zeit für Museen & Restaurants</h3>
                         <p>Wenn die Temperaturen fallen und die Tage kürzer werden, bietet Graz auch in der kalten Jahreszeit...</p>
@@ -227,7 +227,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/winter_schnee.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/winter_schnee_thumb.jpg" alt="Graz mit leichtem Schnee">
+                            <img src="images/blog_thumbs/winter_schnee_thumb.jpeg" alt="Graz mit leichtem Schnee">
                         </div>
                         <h3>Winter in Graz - Schnee in Graz</h3>
                         <p>Schnee in Graz – das ist quasi eine Legende. Obwohl wir uns in Österreich befinden, ist Graz doch zu mediterran geprägt...</p>
@@ -237,7 +237,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/winter_weihnachtszeit.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/winter_weihnachtszeit_thumb.jpg" alt="Weihnachtsmarkt Joanneumsviertel">
+                            <img src="images/blog_thumbs/winter_weihnachtszeit_thumb.jpeg" alt="Weihnachtsmarkt Joanneumsviertel">
                         </div>
                         <h3>Winter in Graz - Weihnachtszeit in Graz</h3>
                         <p>Die Weihnachtszeit in Graz ist eine magische Verwandlung, die die Stadt in ein funkelndes Winterwunderland taucht...</p>
