neue Photos in der Galerie "Herbst in Graz"

--- a/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/graz_herbst.html
+++ b/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/graz_herbst.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie: Herbst in Graz</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/../../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../images/logo.png" alt="Das kleine Glück Logo">
+                <img src="/../../../images/logo.png" alt="Das kleine Glück Logo">
                 <span>Das kleine Glück</span>
             </div>
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="../index.html">Startseite</a></li>
-                    <li><a href="../kalender.html">Kalender</a></li>
-                    <li><a href="../briefkasten.html">Briefkasten</a></li>
-                    <li><a href="../galerie.html" class="active">Galerie</a></li>
-                    <li><a href="../blog.html">Blog</a></li>
-                    <li><a href="../impressum.html">Impressum</a></li>
+                    <li><a href="/../../../index.html">Startseite</a></li>
+                    <li><a href="/../../../kalender.html">Kalender</a></li>
+                    <li><a href="/../../../briefkasten.html">Briefkasten</a></li>
+                    <li><a href="/../../../galerie.html" class="active">Galerie</a></li>
+                    <li><a href="/../../../blog.html">Blog</a></li>
+                    <li><a href="/../../../impressum.html">Impressum</a></li>
                 </ul>
             </nav>
         </div>
@@ -33,21 +33,162 @@
 
         <div class="gallery-grid">
             <div class="gallery-item">
-                <a href="../images/gallery_albums/graz_herbst/7summits.jpg" target="_blank">
-                    <img src="../images/gallery_albums/graz_herbst/7summits_thumb.jpg" alt="7 Summits Herbst">
-                    <div class="caption">Wandern auf den 7 Summits</div>
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins1.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins1_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Herbstblüten</div>
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="../images/gallery_albums/graz_herbst/klanglicht.jpg" target="_blank">
-                    <img src="../images/gallery_albums/graz_herbst/klanglicht_thumb.jpg" alt="Klanglicht Festival">
-                    <div class="caption">Klanglicht Festival</div>
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins2.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins2_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Das Schloss Eggenberg im herbstlichen Gewand</div>
+                </a>
+            </div>
+            
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins3.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins3_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Alljährliche Party im Schauspielhaus</div>
+                </a>
+            </div>
+            
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins4.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins4_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Zirkus</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins5.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins5_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Der Botanische Garten</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins6.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins6_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Der Stadtpark trägt Gold!</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins7.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins7_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Ein Besuch im altesten Café der Stadt: Das Fotter</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins8.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins8_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Ein Spaziergang tut immer gut 😉</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins9.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins9_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Feuerschale auf dem Schlossberg</div>
+                </a>
+            </div>
+
+                 <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins10.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins10_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Herbst-Aussichten</div>
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="../images/gallery_albums/graz_herbst/bauernmarkt.jpg" target="_blank">
-                    <img src="../images/gallery_albums/graz_herbst/bauernmarkt_thumb.jpg" alt="Bauernmarkt Herbst">
-                    <div class="caption">Die Bauernmärkte</div>
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins11.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins11_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Ich fühl mich Disco! 💃🏼🪩</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins12.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins12_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Sonnenuntergang über Graz</div>
+                </a>
+            </div>
+
+                 <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins13.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins13_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Auch der Leechwald hat sein Gewand gewechselt</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins14.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins14_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Die Rosen blühen auch bis in den späten Herbst</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins15.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins15_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Blütenliebe</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins16.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins16_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Das Gewächshaus des botanischen Gartens</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins17.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins17_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Herbstastern</div>
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins18.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins18_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Das Mausoleum im Mondschein</div>
+                </a>
+            </div>
+
+                 <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins19.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins19_thumb.jpeg" alt="7 Summits Herbst">
+                    <div class="caption">Spaß mit dem Schlossberg-Pavillon</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins20.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins20_thumb.jpeg" alt="Klanglicht Festival">
+                    <div class="caption">Blick auf das Aufsteiern an der Grazer Burg</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins21.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins21_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Die Mur im Herbstlicht</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins22.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins22_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Mit der Schlossbergbahn hoch hinaus</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins23.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins23_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Chor-Konzert im Dom im Berg</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins24.jpeg" target="_blank">
+                    <img src="../gallery_albums/graz_herbst/impressionen_herbst_teil_eins24_thumb.jpeg" alt="Bauernmarkt Herbst">
+                    <div class="caption">Weg am USI-Gelände / Rosenhain</div>
                 </a>
             </div>
             </div>
@@ -56,9 +197,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Das kleine Glück. Alle Rechte vorbehalten.</p>
-            <p><a href="../impressum.html">Impressum</a></p>
+            <p><a href="/../../../impressum.html">Impressum</a></p>
         </div>
     </footer>
-    <script src="../js/main.js"></script>
+    <script src="/../../../js/main.js"></script>
 </body>
 </html>
