--- a/Hausaufgabe_Das.kleine.Glück/index.html
+++ b/Hausaufgabe_Das.kleine.Glück/index.html
@@ -50,7 +50,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_eggenberg.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/eggenberg_thumb.jpg" alt="Schloss Eggenberg">
+                            <img src="images/blog_thumbs/eggenberg_thumb.jpeg" alt="Schloss Eggenberg">
                         </div>
                         <h3>Architektur in Graz - Das Schloss Eggenberg</h3>
                         <p>Tauche ein in die Welt des Barocks im Schloss Eggenberg, einem UNESCO-Weltkulturerbe. Ein Spaziergang durch die prunkvollen Säle und den weitläufigen Park ist wie eine Reise in eine andere Zeit.</p>
@@ -59,7 +59,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_uni_graz.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/uni_graz_thumb.jpg" alt="Universität Graz">
+                            <img src="images/blog_thumbs/universitaet_graz_thumb.jpeg" alt="Universität Graz">
                         </div>
                         <h3>Architektur in Graz - Die Universität Graz</h3>
                         <p>Nicht nur ein Zentrum des Wissens, sondern auch ein beeindruckendes architektonisches Ensemble. Entdecke die Vielfalt der Universitätsgebäude, die von historischen Bauten bis zu modernen Ergänzungen reichen.</p>
@@ -68,7 +68,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/architektur_herz_jesu.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/herz_jesu_thumb.jpg" alt="Herz Jesu Kirche Graz">
+                            <img src="images/blog_thumbs/herzjesu_thumb.jpeg" alt="Herz Jesu Kirche Graz">
                         </div>
                         <h3>Architektur in Graz - Die Herz Jesu Kirche</h3>
                         <p>Ein imposantes neugotisches Bauwerk, dessen Türme weit über die Dächer von Graz ragen. Bestaune die beeindruckende Architektur und die kunstvollen Details dieses spirituellen Wahrzeichens.</p>
@@ -77,7 +77,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/fruehling_rosenhain.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/rosenhain_thumb.jpg" alt="Kirschblüten Rosenhain">
+                            <img src="images/blog_thumbs/fruehling_rosenhain_thumb.jpeg" alt="Kirschblüten Rosenhain">
                         </div>
                         <h3>Frühling in Graz - Kirschblütentraum am Rosenhain</h3>
                         <p>Mitte April bis Anfang Mai verwandelt sich die Kirschallee am Rosenhain in ein zartrosa Blütenmeer – ein magischer Photospot und ideal für einen entspannten Nachmittag mit Café und Picknick auf der Wiese.</p>
@@ -86,7 +86,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/fruehling_schlossberg.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/schlossberg_fruehling_thumb.jpg" alt="Schlossberg Graz Frühling">
+                            <img src="images/blog_thumbs/fruehling_schlossberg_thumb.jpeg" alt="Schlossberg Graz Frühling">
                         </div>
                         <h3>Frühling in Graz - Der Schlossberg ganz romantisch (und bunt)</h3>
                         <p>Der Grazer Schlossberg ist im Frühling ein wahres Blütenparadies. Entdecke versteckte Pfade und bunte Blumenmeere, die den perfekten Rahmen für romantische Spaziergänge bieten. Ideal für Verliebte und alle, die es wieder werden wollen.</p>
@@ -95,7 +95,7 @@
                  <article class="blog-preview">
                     <a href="blog_posts/fruehling_lend.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/lend_thumb.jpg" alt="Lendplatz Graz">
+                            <img src="images/blog_thumbs/fruehling_lend_thumb.jpeg" alt="Lendplatz Graz">
                         </div>
                         <h3>Frühling in Graz - Buntes Treiben im Stadtteil Lend</h3>
                         <p>Der Lend ist jung, hip und immer in Bewegung! Besonders im Frühjahr lockt das Viertel mit lebhafter Atmosphäre, spannenden Events wie dem "Lendenwirbel" und einer bunten Mischung aus Kultur und Gastronomie. Ein Ort, der zum Verweilen und Entdecken einlädt.</p>
@@ -104,7 +104,7 @@
                 <article class="blog-preview">
                     <a href="blog_posts/sommer_schlosspark.html">
                         <div class="blog-preview-image">
-                            <img src="images/blog_thumbs/schlosspark_thumb.jpg" alt="Schlosspark Eggenberg">
+                            <img src="images/blog_thumbs/sommer_schlossberg_konzerte_thumb.jpeg" alt="Schlosspark Eggenberg">
                         </div>
                         <h3>Sommer in Graz - Wo wenn nicht im Schlosspark</h3>
                         <p>Der Schlosspark in Graz ist im Sommer eine grüne Oase der Ruhe und Erholung. Die weitläufigen Wiesen und alten Bäume laden zum Entspannen und Verweilen ein. Perfekt für ein Picknick oder einen entspannten Spaziergang abseits des städtischen Trubels.</p>
