Viele Änderungen - der Hamburger klappt noch immer nicht wie ich das will

--- a/Hausaufgabe_Das.kleine.Glück/blog.html
+++ b/Hausaufgabe_Das.kleine.Glück/blog.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
+   <header>
         <div class="container">
+
             <div class="logo">
-                <img src="images/logo.png" alt="Das kleine Glück Logo">
+                <a href="lia_mxn.html" class="logo-image-link">
+                    <img src="images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+
+                <a href="index.html" class="logo-text-link">
                 <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
@@ -21,7 +28,7 @@
                     <li><a href="kalender.html">Kalender</a></li>
                     <li><a href="briefkasten.html">Briefkasten</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
-                    <li><a href="blog.html" class="active">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="impressum.html">Impressum</a></li>
                 </ul>
             </nav>
@@ -29,6 +36,7 @@
     </header>
 
     <main class="container">
+        <a href="index.html" class="back-button-main" aria-label="Zurück zur Startseite"><i class="fas fa-arrow-left"></i></a>
         <section class="content-section">
             <h1>Alle Blog-Einträge</h1>
             <p>Tauche ein in die Welt des kleinen Glücks in Graz und entdecke detaillierte Berichte über die schönsten Orte und Erlebnisse.</p>
