--- a/Hausaufgabe_Das.kleine.Glück/briefkasten.html
+++ b/Hausaufgabe_Das.kleine.Glück/briefkasten.html
@@ -10,16 +10,23 @@
 <body>
     <header>
         <div class="container">
+
             <div class="logo">
-                <img src="images/logo.png" alt="Das kleine Glück Logo">
+                <a href="lia_mxn.html" class="logo-image-link">
+                    <img src="images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+
+                <a href="index.html" class="logo-text-link">
                 <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="kalender.html">Kalender</a></li>
-                    <li><a href="briefkasten.html" class="active">Briefkasten</a></li>
+                    <li><a href="briefkasten.html">Briefkasten</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="impressum.html">Impressum</a></li>
@@ -29,6 +36,7 @@
     </header>
 
     <main class="container">
+        <a href="index.html" class="back-button-main" aria-label="Zurück zur Startseite"><i class="fas fa-arrow-left"></i></a>
         <section class="content-section">
             <h1>Dein Briefkasten für nette Grüße</h1>
             <p>Hinterlasse eine liebe Nachricht für mich oder andere Besucher dieser Seite! Ein kleines Glück für zwischendurch.</p>
