--- a/Hausaufgabe_Das.kleine.Glück/impressum.html
+++ b/Hausaufgabe_Das.kleine.Glück/impressum.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
+  <header>
         <div class="container">
+
             <div class="logo">
-                <img src="images/logo.png" alt="Das kleine Glück Logo">
+                <a href="lia_mxn.html" class="logo-image-link">
+                    <img src="images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+
+                <a href="index.html" class="logo-text-link">
                 <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
@@ -22,13 +29,14 @@
                     <li><a href="briefkasten.html">Briefkasten</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="impressum.html" class="active">Impressum</a></li>
+                    <li><a href="impressum.html">Impressum</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
  <main id="impressum">
+    <a href="index.html" class="back-button-main" aria-label="Zurück zur Startseite"><i class="fas fa-arrow-left"></i></a>
             <h4>Informationen über den Dienstanbieter:</h4>
             <p>Lia Mxn<br>
             Musterstrasse 1, Stiege 1 Tür 1,<br>
