--- a/Hausaufgabe_Das.kleine.Glück/index.html
+++ b/Hausaufgabe_Das.kleine.Glück/index.html
@@ -11,14 +11,21 @@
 <body>
     <header>
         <div class="container">
+
             <div class="logo">
-                <img src="images/logo.png" alt="Das kleine Glück Logo">
+                <a href="lia_mxn.html" class="logo-image-link">
+                    <img src="images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+
+                <a href="index.html" class="logo-text-link">
                 <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html" class="active">Startseite</a></li>
+                    <li><a href="index.html">Startseite</a></li>
                     <li><a href="kalender.html">Kalender</a></li>
                     <li><a href="briefkasten.html">Briefkasten</a></li>
                     <li><a href="galerie.html">Galerie</a></li>
