--- a/Hausaufgabe_Das.kleine.Glück/blog_posts/architektur_oper.html
+++ b/Hausaufgabe_Das.kleine.Glück/blog_posts/architektur_oper.html
@@ -10,8 +10,14 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../images/logo.png" alt="Das kleine Glück Logo"> <span>Das kleine Glück</span>
+                <a href="../lia_mxn.html" class="logo-image-link">
+                    <img src="../images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+                <a href="../index.html" class="logo-text-link">
+                    <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
@@ -27,6 +33,7 @@
     </header>
 
     <main class="container blog-post-detail">
+        <a href="../blog.html" class="back-button-main" aria-label="Zurück zur Blog-Übersicht"><i class="fas fa-arrow-left"></i></a>
         <article class="content-section">
             <div class="blog-header">
                 <h1>Architektur in Graz - Die Grazer Oper</h1>
