--- a/Hausaufgabe_Das.kleine.Glück/blog_posts/sommer_csd.html
+++ b/Hausaufgabe_Das.kleine.Glück/blog_posts/sommer_csd.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="container">
+            <a href="../blog.html" class="back-button" aria-label="Zurück zur vorherigen Seite"><i class="fas fa-arrow-left"></i></a>
             <div class="logo">
                 <img src="../images/logo.png" alt="Das kleine Glück Logo">
                 <span>Das kleine Glück</span>
@@ -29,27 +30,24 @@
     </header>
 
     <main class="container blog-post-detail">
+        <a href="../blog.html" class="back-button-main" aria-label="Zurück zur Blog-Übersicht"><i class="fas fa-arrow-left"></i></a>
+        
         <article class="content-section">
             <div class="blog-header">
                 <h1>Sommer in Graz - CSD - Fest der Liebe für Alle</h1>
                 <p class="blog-meta">Veröffentlicht am 05. Juli 2025</p>
             </div>
 
-            <div class="blog-images-grid">
-                <img src="../images/blog_full/sommer_csd1.jpeg" alt="CSD Parade Graz">
-                <img src="../images/blog_full/sommer_csd2.jpeg" alt="CSD Fest Volksgarten">
-                <img src="../images/blog_full/sommer_csd3.jpeg" alt="CSD Vielfalt">
-                <img src="../images/blog_full/sommer_csd4.jpeg" alt="CSD Parade Graz">
-                <img src="../images/blog_full/sommer_csd5.jpeg" alt="CSD Fest Volksgarten">
-                <img src="../images/blog_full/sommer_csd6.jpeg" alt="CSD Vielfalt">
-                <img src="../images/blog_full/sommer_csd7.jpeg" alt="CSD Parade Graz">
-                <img src="../images/blog_full/sommer_csd8.jpeg" alt="CSD Fest Volksgarten">
-                <img src="../images/blog_full/sommer_csd9.jpeg" alt="CSD Vielfalt">
-                <img src="../images/blog_full/sommer_csd10.jpeg" alt="CSD Parade Graz">
-                <img src="../images/blog_full/sommer_csd11.jpeg" alt="CSD Fest Volksgarten">
-                </div>
+            <div class="blog-single-image">
+                <img src="../images/blog_full/sommer_csd1.jpeg" alt="CSD Parade Graz - Hauptbild">
+            </div>
 
             <p>Ende Juni, wenn der Christopher Street Month weltweit gefeiert wird, verwandelt sich auch Graz in ein buntes Meer der Vielfalt und Toleranz. Der Christopher Street Day (CSD) in Graz ist weit mehr als nur eine Demonstration – er ist ein lebhaftes Fest der Liebe für Alle, das die Stadt mit Freude, Musik und einer Botschaft der Akzeptanz erfüllt. Die große CSD-Parade zieht sich durch die Innenstadt und mündet schließlich in einem ausgelassenen Fest im Volksgarten.</p>
+
+            <div class="blog-inline-image">
+                <img src="../images/blog_full/sommer_csd2.jpeg" alt="CSD Fest Volksgarten">
+                <img src="../images/blog_full/sommer_csd3.jpeg" alt="CSD Vielfalt">
+            </div>
 
             <p>Die Parade selbst ist ein Spektakel aus Farben, Kostümen und fröhlichen Gesichtern. Menschen jeden Alters, jeder Herkunft und jeder Orientierung versammeln sich, um gemeinsam für Gleichberechtigung, Sichtbarkeit und Toleranz einzustehen. Es ist ein starkes Zeichen für eine offene Gesellschaft, in der alle Arten von Liebe willkommen sind und zelebriert werden. Nach der Parade geht die Feier im Volksgarten weiter, wo DJs auflegen, Bands spielen und eine entspannte Atmosphäre zum Tanzen, Plaudern und Wohlfühlen einlädt. Es ist eine Party, auf der sich jeder wohlfühlen kann, egal wer man ist oder wen man liebt. Der CSD in Graz ist ein wichtiges Event, das die Stadt bunter, lauter und liebevoller macht.</p>
 
@@ -60,6 +58,17 @@
                 <li><strong>Bunte Vielfalt:</strong> Die Parade ist bekannt für ihre kreativen und farbenfrohen Outfits, die die Vielfalt der Community widerspiegeln.</li>
                 <li><strong>Internationale Bewegung:</strong> Der CSD in Graz ist Teil einer weltweiten Bewegung, die an die Stonewall-Aufstände von 1969 erinnert und für die Rechte von queeren Menschen kämpft.</li>
             </ul>
+        
+            <div class="blog-images-grid blog-post-end-grid">
+                <img src="../images/blog_full/sommer_csd4.jpeg" alt="CSD Parade Graz">
+                <img src="../images/blog_full/sommer_csd5.jpeg" alt="CSD Fest Volksgarten">
+                <img src="../images/blog_full/sommer_csd6.jpeg" alt="CSD Vielfalt">
+                <img src="../images/blog_full/sommer_csd7.jpeg" alt="CSD Parade Graz">
+                <img src="../images/blog_full/sommer_csd8.jpeg" alt="CSD Fest Volksgarten">
+                <img src="../images/blog_full/sommer_csd9.jpeg" alt="CSD Vielfalt">
+                <img src="../images/blog_full/sommer_csd10.jpeg" alt="CSD Parade Graz">
+                <img src="../images/blog_full/sommer_csd11.jpeg" alt="CSD Fest Volksgarten">
+            </div>
         </article>
     </main>
 
