--- a/Hausaufgabe_Das.kleine.Glück/galerie.html
+++ b/Hausaufgabe_Das.kleine.Glück/galerie.html
@@ -8,19 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
+<header>
         <div class="container">
+
             <div class="logo">
-                <img src="images/logo.png" alt="Das kleine Glück Logo">
+                <a href="lia_mxn.html" class="logo-image-link">
+                    <img src="images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+
+                <a href="index.html" class="logo-text-link">
                 <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="index.html">Startseite</a></li>
                     <li><a href="kalender.html">Kalender</a></li>
                     <li><a href="briefkasten.html">Briefkasten</a></li>
-                    <li><a href="galerie.html" class="active">Galerie</a></li>
+                    <li><a href="galerie.html">Galerie</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="impressum.html">Impressum</a></li>
                 </ul>
@@ -29,6 +36,7 @@
     </header>
 
     <main class="container">
+        <a href="index.html" class="back-button-main" aria-label="Zurück zur Startseite"><i class="fas fa-arrow-left"></i></a>
         <section class="content-section">
             <h1>Unsere Graz-Galerie</h1>
             <p>Lass dich von den schönsten Seiten von Graz inspirieren und entdecke die Vielfalt der Stadt in unseren Alben.</p>
