--- a/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/graz_sommer.html
+++ b/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/graz_sommer.html
@@ -11,8 +11,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../../../images/logo.png" alt="Das kleine Glück Logo">
-                <span>Das kleine Glück</span>
+                <a href="../../../lia_mxn.html" class="logo-image-link">
+                    <img src="../../../images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+                <a href="../../../index.html" class="logo-text-link">
+                    <span>Das kleine Glück</span>
+                </a>
             </div>
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
@@ -29,6 +33,8 @@
     </header>
 
     <main class="container gallery-detail-page">
+                <a href="../../galerie.html" class="back-button-main" aria-label="Zurück zur Galerie-Übersicht"><i class="fas fa-arrow-left"></i></a>
+                
         <h1>Sommer in Graz</h1>
 
         <div class="gallery-grid">
