--- a/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/grazer_architektur.html
+++ b/Hausaufgabe_Das.kleine.Glück/images/gallery_albums/grazer_architektur.html
@@ -10,10 +10,15 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">
-                <img src="../../../images/logo.png" alt="Das kleine Glück Logo">
-                <span>Das kleine Glück</span>
+           <div class="logo">
+                <a href="../../../lia_mxn.html" class="logo-image-link">
+                    <img src="../../../images/logo.png" alt="Das kleine Glück Logo">
+                </a>
+                <a href="../../../index.html" class="logo-text-link">
+                    <span>Das kleine Glück</span>
+                </a>
             </div>
+
             <nav>
                 <button class="hamburger" id="hamburger"><i class="fas fa-bars"></i></button>
                 <ul class="nav-links" id="navLinks">
@@ -29,6 +34,7 @@
     </header>
 
     <main class="container gallery-detail-page">
+        <a href="../../galerie.html" class="back-button-main" aria-label="Zurück zur Galerie-Übersicht"><i class="fas fa-arrow-left"></i></a>
         <h1>Architektur in Graz</h1>
 
         <div class="gallery-grid">
